# authentic

./: .auth.env  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/authentic/: __init__.py  __main__.py  logger.py  main.py  oauth_provider.py  oauth_server.py  settings.py  utils.py
src/authentic/config/: auth.py
src/authentic/static/: accepted.html  consent.html  denied.html  login.html
tests/: __init__.py  test_main.py
